--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Mehfil-e-dard</title>
+    <title>Mehfil-E-Dard</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -44,10 +44,11 @@
     <audio id="HaqK" src="HaqK.m4a" preload="auto"></audio>
     <audio id="TamashaK" src="TamashaK.m4a" preload="auto"></audio>
 
-    <footer>
+    <div class="Authors-Note">
         Author's Note: This is a casual fun project, made solely because we had a few minutes to kill. If you find it fun, do let us know &#128512;
-    </footer>
+    </div>
 
     <script src="app.js"></script>
 </body>
 </html>
+
